install_data(
	('@0@.svg').format('io.github.TheWisker.Cavasik'),
	install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps')
)

install_data(
	('@0@-symbolic.svg').format('io.github.TheWisker.Cavasik'),
 	install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'symbolic', 'apps')
)
